# AudioFix

./: .gitignore  LICENSE  README.md  ToDo.md  proj_mem.md  pyproject.toml  run_gui.py
docs/: dependencies.md  ideas.md
src/audiofix/: __init__.py  __main__.py
src/audiofix/core/: __init__.py  config.py  ffmpeg.py  logging.py  planning.py
src/audiofix/gui/: __init__.py  app.py  theme.py
tests/: test_planning.py
tools/: README.md  check_ffmpeg.py  install_ffmpeg.py
